--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,41 @@
-vendor/*
-**/logs/*
+# Configuration files (should be created from environment variables)
+config/database.php
+config/auth.php
+config/email.php
+config/recording.php
+
+# Logs
+logs/
 *.log
-config/*
-!config/*.default.php
-documents/*
-!documents/.gitkeep
-coverage/*
-.php_cs*
-.vagrant/*
-build/sql/*
+
+# Environment files
+.env
+.env.local
+.env.production
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Composer
+vendor/
+composer.lock
+
+# Node modules (if any)
+node_modules/
+npm-debug.log
+
+# Build artifacts
+build/
+dist/
+
+# Temporary files
+tmp/
+temp/
