--- a/docker/apache.conf
+++ b/docker/apache.conf
@@ -1,3 +1,6 @@
+# Global ServerName directive to suppress the warning
+ServerName localhost
+
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html/public
