Fix PHP error display and suppress deprecation warnings completely

--- a/php.ini
+++ b/php.ini
@@ -1,11 +1,15 @@
 ; PHP Configuration for Rota Management System
 display_errors = Off
-error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
+display_startup_errors = Off
 log_errors = On
 error_log = /tmp/php_errors.log
 
-; Suppress deprecation warnings
-error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT & ~E_WARNING
+; Suppress ALL warnings and deprecation notices
+error_reporting = E_ERROR | E_PARSE | E_CORE_ERROR | E_CORE_WARNING | E_COMPILE_ERROR | E_COMPILE_WARNING
+
+; Additional error suppression
+ignore_repeated_errors = On
+ignore_repeated_source = On
 
 ; Memory and execution settings
 memory_limit = 256M
