--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 
 [deploy]
 startCommand = "bash scripts/start.sh"
-healthcheckPath = "/"
+healthcheckPath = "/test.php"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
