Update PHP configuration and enable error reporting

--- a/php.ini
+++ b/php.ini
@@ -5,7 +5,7 @@ log_errors = On
 error_log = /tmp/php_errors.log
 
 ; Suppress ALL warnings and deprecation notices
-error_reporting = E_ERROR | E_PARSE | E_CORE_ERROR | E_CORE_WARNING | E_COMPILE_ERROR | E_COMPILE_WARNING
+error_reporting = E_ERROR | E_PARSE | E_CORE_ERROR | E_CORE_WARNING | E_COMPILE_ERROR | E_COMPILE_WARNING | E_DEPRECATED | E_USER_DEPRECATED
 
 ; Additional error suppression
 ignore_repeated_errors = On
@@ -22,4 +22,12 @@ session.cookie_lifetime = 0
 
 ; File upload settings
 upload_max_filesize = 10M
-post_max_size = 10M 
+post_max_size = 10M
+
+; Enable SQLite extension
+extension=sqlite3
+extension=pdo_sqlite
+
+; Enable MySQL extension
+extension=mysqli
+extension=pdo_mysql 
